@@ -4,14 +4,10 @@
   fuse.dom.NodeList = fuse.Fusebox().Array;
 
   addArrayMethods(NodeList);
+  addNodeListMethods(NodeList);
 
+  // ensure each element is wrapped
   (function(plugin) {
-    var SKIPPED_PROPERTIES = {
-      'constructor': 1,
-      'match':       1,
-      'select':      1
-    };
-
     NodeList.from = function from(iterable) {
       if (!iterable || iterable == '') return NodeList();
       var object = fuse.Object(iterable);
@@ -86,28 +82,6 @@
 
     // make NodeList use fuse.Array#map so values aren't passed through fuse.dom.Node
     plugin.map = fuse.Array.plugin.map;
-
-    // add Element methods
-    eachKey(Element.plugin, function(value, key, object) {
-      if (SKIPPED_PROPERTIES[key] || !hasKey(object, key)) return;
-
-      plugin[key] = /^(?:(?:is|get|has)[A-Z]|ancestor|child|descendant|down|empty|first|identify|inspect|next|previous|read|scroll|sibling|visible)/.test(key) ?
-        // getters return the value of the first element
-        function() {
-          var args = arguments, first = this[0];
-          if (first) return args.length
-            ? first[key].apply(first, args)
-            : first[key]();
-        } :
-        // setters are called for each element in the list
-        function() {
-          var node, args = arguments, i = 0;
-          if (args.length)
-            while (node = this[i++]) node[key].apply(node, args);
-          else while (node = this[i++]) node[key]();
-          return this;
-        };
-    });
 
     // prevent JScript bug with named function expressions
     var concat = nil, from = nil, fromArray = nil, fromNodeList = nil, push = nil;
