@@ -1,5 +1,80 @@
   /*------------------------------- DOM: NODE --------------------------------*/
 
+  addNodeListMethods = (function() {
+    var plugin,
+
+    SKIPPED_KEYS = { 'callSuper': 1, 'constructor': 1, 'match': 1, 'select': 1 },
+
+    arrProto = Array.prototype,
+
+    arrEvery = arrProto.every ||
+      function(callback) {
+        var i = 0, array = this, l = array.length;
+        for ( ; i < length; i++) {
+          if (i in array && !callback(array[i]))
+            return false;
+        }
+        return true;
+      },
+
+    arrEach = arrProto.forEach ||
+      function(callback) {
+        var i = 0, array = this, l = array.length;
+        for ( ; i < length; i++) {
+          if (i in array) callback(array[i]);
+        }
+      },
+
+    arrSome = arrProto.some ||
+      function(callback) {
+        var i = 0, array = this, l = array.length;
+        for ( ; i < length; i++) {
+          if (i in array && callback(array[i]))
+            return true;
+        }
+        return false;
+      },
+
+    reBool = /^(?:(?:is|has)[A-Z]|contains)/,
+
+    reGetter = /^(?:get[A-Z]|down|first|identify|inspect|last|next|previous|read|scroll)/;
+
+    function addMethod(value, key, object) {
+      if (!SKIPPED_KEYS[key] && isFunction(key) && hasKey(object, key)) {
+        if (reGetter.test(key)) {
+          // getters return the value of the first element
+          plugin[key] = Function('o',
+            'function ' + key + '(){' +
+            'var a=arguments,m=o.' + key + ',e=this[0];' +
+            'if(e)return a.length?m.apply(e,a):m.call(e)' +
+            '}return ' + key)(object);
+        }
+        else {
+          // return true for methods prefixed with `is` when all return true OR
+          // return true for methods prefixed with `has`/`contains` when some return true OR
+          // return the array after executing a method for all elements
+          var isBool = reBool.test(key);
+          plugin[key] = Function('o,am',
+            'function ' + key + '(){' +
+            'var a=arguments,m=o.' + key + ',es=this;' +
+            (isBool ? 'return ' : '') + 'a.length' +
+            '?am.apply(es,function(e){return m.apply(e,a)})' +
+            ':am.call(es,function(e){return m.call(e)})' +
+            (isBool ? '' : ';return es') +
+            '}return ' + key)(object,
+             isBool ? (key.indexOf('is') ? arrSome : arrEvery) : arrEach);
+        }
+      }
+    }
+
+    return function(List) {
+      plugin = List.plugin;
+      eachKey(Element.plugin, addMethod);
+    };
+  })();
+
+  /*--------------------------------------------------------------------------*/
+
   Node =
   fuse.dom.Node = (function() {
     function Decorator() { }
@@ -116,11 +191,14 @@
 
     function updateGenerics(deep) {
       var Klass = this;
-      if (deep) fuse.updateGenerics(Klass, deep);
-      else Obj._each(Klass.prototype, function(value, key, proto) {
-        if (!SKIPPED_KEYS[key] && isFunction(proto[key]) && hasKey(proto, key))
-          Klass[key] = createGeneric(proto, key);
-      });
+      if (deep) {
+        fuse.updateGenerics(Klass, deep);
+      } else {
+        Obj._each(Klass.prototype, function(value, key, proto) {
+          if (!SKIPPED_KEYS[key] && isFunction(proto[key]) && hasKey(proto, key))
+            Klass[key] = createGeneric(proto, key);
+        });
+      }
     }
 
     return updateGenerics;
